kube/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-server
  labels:
    app: spring-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-server
  template:
    metadata:
      labels:
        app: spring-server
    spec:
      containers:
        - name: spring-server
          image: gutanbug53/gamelink-dev:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: "/src/main/resources/application.yml"
              subPath: application.yml
      volumes:
        - name: config-volume
          secret:
            secretName: spring-server-config
