kube/gamelink-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamelink-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamelink-kafka
  template:
    metadata:
      labels:
        app: gamelink-kafka
    spec:
      containers:
        - name: gamelink-kafka
          image: wurstmeister/kafka:latest
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: gamelink-kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: gamelink-kafka
  type: NodePort
