kube/gamelink-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamelink-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamelink-mongo
  template:
    metadata:
      labels:
        app: gamelink-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: gamelink-mongo
spec:
  selector:
    app: gamelink-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
