kube/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-server
spec:
  selector:
    app: spring-server
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30075
