kube/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamelink-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gamelink.asia
      http:
        paths:
          - path: /api/swagger-ui/
            pathType: Prefix
            backend:
              service:
                name: spring-server
                port:
                  number: 8080
